# agl-colo-report

./: .gitignore  README.md  agl-colo-report.code-workspace  pyproject.toml
.github/workflows/: python-package.yml
agl_colo_report/: form_data.json  manage.py  tmp.txt
agl_colo_report/agl_colo_report/: asgi.py  settings.py  urls.py  wsgi.py
agl_colo_report/data/colon-anatomy/: colon-anatomies.yaml
agl_colo_report/data/drug/: data.yaml
agl_colo_report/data/information-source/: data.yaml
agl_colo_report/data/organ/: duodenum.yaml  large-intestines.yaml  small-intestines.yaml
agl_colo_report/data/pathology-type/: data.yaml
agl_colo_report/data/unit/: data.yaml
agl_colo_report/logger/: write.py
agl_colo_report/logs/: 2023-09-23_error_my_log.md  function_call_delete_all_entries.md  function_call_delete_report.md
agl_colo_report/reports/: dataloader_utils.py  urls.py
agl_colo_report/reports/forms/: __init__.py
agl_colo_report/reports/migrations/: 0001_initial.py  0002_alter_drugapplication_value_and_more.py  0002_remove_colonpolyplocation_colon_anatomy_and_more.py  0003_alter_colonpolypmorphology_categorical_and_more.py  0003_rename_size_classification_sizecategory_classification_and_more.py  0004_alter_reportfindings_report.py  0004_delete_polypmorphology_and_more.py  0005_rename_cm_colonpolyplocation_cm_from_anal_verge.py  0005_rename_morphology_categorical_colonpolypmorphology_categorical_and_more.py  0006_alter_colonpolyplocation_polyp.py  0006_intervention_interventiontype.py  (+10 more)
cookiecutter-templates/basic-serializer/: cookiecutter.json
(+214 files in other folders)
